--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "lemma-showcase",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "build": "nx run-many --target=build --projects=nexelem,graphne"
+  },
   "private": true,
   "devDependencies": {
     "@angular-devkit/build-angular": "~14.2.0",
