--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: 16
           cache: 'npm'
 
-      - run: npm ci
+      - run: npm ci --prefer-offline
       - run: npm run build
 
   build-cache-check:
@@ -35,5 +35,5 @@ jobs:
           node-version: 16
           cache: 'npm'
 
-      - run: npm ci
+      - run: npm ci --prefer-offline
       - run: npm run build
