--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "nx run-many --target=build --projects=nexelem,graphne"
+    "build": "nx run-many --target=build --projects=nexelem,graphne",
+    "affected:test": "nx affected:test --browsers=ChromeHeadless",
+    "affected:build": "nx affected:build"
   },
   "private": true,
   "devDependencies": {
