--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,7 @@ name: CI
 
 env:
   node.version: 16.x
+  main-branch-name: master
 
 on:
   pull_request:
@@ -21,6 +22,10 @@ jobs:
           node-version: ${{env.node.version}}
           cache: 'npm'
 
+      - uses: nrwl/nx-set-shas@v3
+        with:
+          main-branch-name: ${{env.main-branch-name}}
+
       - run: npm ci
       - run: npm run affected:test -- --base=${{env.NX_BASE}} --head=${{env.NX_HEAD}}
 
@@ -39,6 +44,8 @@ jobs:
           cache: 'npm'
 
       - uses: nrwl/nx-set-shas@v3
+        with:
+          main-branch-name: ${{env.main-branch-name}}
 
       - run: npm ci
       - run: npm run affected:build -- --base=${{env.NX_BASE}} --head=${{env.NX_HEAD}}
