--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "lint": "nx run-many --target=lint --projects=nexelem,graphne",
     "build": "nx run-many --target=build --projects=nexelem,graphne",
-    "affected:lint": "nx affected:lints",
+    "affected:lint": "nx affected:lint",
     "affected:test": "nx affected:test --browsers=ChromeHeadless",
     "affected:build": "nx affected:build"
   },
