--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "nexelem:e2e": "cypress open --project=./applications/nexelem-e2e",
     "graphne:serve": "nx serve graphne --port 4300",
     "graphne:e2e": "cypress open --project=./applications/graphne-e2e",
-    "serve:graphne": "nx serve graphne",
-    "lint": "nx run-many --target=lint --projects=nexelem,graphne",
     "build": "nx run-many --target=build --projects=nexelem,graphne",
+    "affected:format-check": "nx affected:format-check",
     "affected:lint": "nx affected:lint",
     "affected:test": "nx affected:test --browsers=ChromeHeadless",
     "affected:e2e": "nx affected:e2e --parallel=1",
