--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "graphne:serve": "nx serve graphne --port 4300",
     "graphne:e2e": "cypress open --project=./applications/graphne-e2e",
     "build": "nx run-many --target=build --projects=nexelem,graphne",
-    "affected:format-check": "nx affected:format-check",
+    "affected:format-check": "nx format:check",
     "affected:lint": "nx affected:lint",
     "affected:test": "nx affected:test --browsers=ChromeHeadless",
     "affected:e2e": "nx affected:e2e --parallel=1",
