--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,16 @@ jobs:
         with:
           fetch-depth: 0
 
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{env.node.version}}
+          cache: 'npm'
+
       - uses: nrwl/nx-set-shas@v3
         with:
           main-branch-name: ${{env.main-branch-name}}
 
+      - run: npm ci
       - run: npm run affected:format-check -- --base=${{env.NX_BASE}} --head=${{env.NX_HEAD}}
 
   lint:
