feat: setup cucumber with cypress

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@angular/compiler-cli": "~14.2.0",
     "@angular/language-service": "~14.2.0",
     "@badeball/cypress-cucumber-preprocessor": "^14.0.0",
+    "@bahmutov/cypress-esbuild-preprocessor": "^2.1.5",
     "@cucumber/cucumber": "^8.7.0",
+    "@cypress/webpack-preprocessor": "^5.15.5",
     "@nrwl/angular": "^15.0.13",
     "@nrwl/cli": "15.0.13",
     "@nrwl/cypress": "15.0.13",
