--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "storybook": "nx storybook shared-storybook",
     "og-nexelem:e2e": "cypress open --project=./applications/og-nexelem-e2e",
     "nexelem:serve": "nx serve nexelem --port 4200",
     "nexelem:e2e": "cypress open --project=./applications/nexelem-e2e",
@@ -35,7 +36,13 @@
     "@nrwl/jest": "15.0.13",
     "@nrwl/js": "15.0.13",
     "@nrwl/linter": "15.0.13",
+    "@nrwl/storybook": "15.0.13",
     "@nrwl/workspace": "15.0.13",
+    "@storybook/addon-essentials": "~6.5.9",
+    "@storybook/angular": "~6.5.9",
+    "@storybook/builder-webpack5": "~6.5.9",
+    "@storybook/core-server": "~6.5.9",
+    "@storybook/manager-webpack5": "~6.5.9",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -51,7 +58,8 @@
     "prettier": "^2.6.2",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "typescript": "~4.8.2",
+    "webpack": "^5.64.0"
   },
   "dependencies": {
     "@angular/animations": "~14.2.0",
