feat: readme.md

--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "license": "MIT",
   "scripts": {
     "storybook": "nx storybook shared-storybook",
-    "og-nexelem:e2e": "cypress open --project=./applications/og-nexelem-e2e",
     "nexelem:serve": "nx serve nexelem --port 4200",
     "nexelem:e2e": "cypress open --project=./applications/nexelem-e2e",
+    "nexelem:build": "nx build nexelem",
     "graphne:serve": "nx serve graphne --port 4300",
     "graphne:e2e": "cypress open --project=./applications/graphne-e2e",
+    "graphne:build": "nx build graphne",
+    "lint": "nx lint",
+    "test": "nx test --watch --browser=chrome",
     "build": "nx run-many --target=build --projects=nexelem,graphne",
     "affected:format-check": "nx format:check",
     "affected:lint": "nx affected:lint",
+    "affected:lint:master": "nx affected:lint --base=master --head=HEAD",
     "affected:test": "nx affected:test --browsers=ChromeHeadless",
+    "affected:test:master": "nx affected:test --base=master --head=HEAD",
     "affected:e2e": "nx affected:e2e --parallel=1",
     "affected:build": "nx affected:build"
   },
